results csv file

--- a/Projec_2_GRoup_9.ipynb
+++ b/Projec_2_GRoup_9.ipynb
@@ -452,7 +452,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -497,6 +497,7 @@
         "\n",
         "# Create detailed results table by m value\n",
         "df_results = pd.DataFrame(results)\n",
+        "df_results.to_csv('results.csv', index=False)\n",
         "\n",
         "# Create summary table with one row per m value\n",
         "results_summary = df_results[['m', 'L1_2024', 'L1_2025']].copy()\n",
@@ -761,7 +762,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.4"
+      "version": "3.9.13"
     }
   },
   "nbformat": 4,
