--- a/Projec_2_GRoup_9.ipynb
+++ b/Projec_2_GRoup_9.ipynb
@@ -167,7 +167,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -193,7 +193,8 @@
         }
       ],
       "source": [
-        "# Data Collection\n",
+        "#d\n",
+        "#data Collection\n",
         "\n",
         "def get_nasdaq100_tickers():\n",
         "\n",
@@ -203,7 +204,7 @@
         "                             'Chrome/120.0.0.0 Safari/537.36'}\n",
         "\n",
         "    response = requests.get(url, headers=headers)\n",
-        "    response.raise_for_status()  # Raises an HTTPError if status != 200\n",
+        "    response.raise_for_status()  #raises an HTTPError if status != 200\n",
         "\n",
         "    tables = pd.read_html(response.text)\n",
         "\n",
@@ -221,18 +222,18 @@
         "\n",
         "def download_data(tickers, start_date, end_date):\n",
         "    \"\"\"Download stock price data and calculate returns.\"\"\"\n",
-        "    # Download data\n",
+        "    #download data\n",
         "    data = yf.download(tickers, start=start_date, end=end_date, \n",
         "                       progress=False, auto_adjust=False)\n",
         "    \n",
         "    prices = data['Adj Close']\n",
         "\n",
-        "    # Forward fill and backward fill to handle missing days\n",
+        "    #forward fill and backward fill to handle missing days\n",
         "    prices = prices.ffill().bfill()\n",
         "    \n",
-        "    # Drop columns with any remaining NaN values (stocks that couldn't be filled)\n",
+        "    #drop columns with any remaining NaN values (stocks that couldn't be filled)\n",
         "    prices = prices.dropna(axis=1)\n",
-        "    # Calculate returns\n",
+        "    #calculate returns\n",
         "    returns = prices.pct_change().dropna()\n",
         "    \n",
         "    return prices, returns\n",
@@ -294,22 +295,37 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "IP:\n",
+        "\n",
+        "$max \\sum_{i,j} rho_{ij} * x_{ij}$\n",
+        "\n",
+        "\n",
+        "s.t. \n",
+        "\n",
+        "$\\sum_j y_j = m$\n",
+        "\n",
+        "$\\sum_j x_{ij} = 1$          ∀i\n",
+        "\n",
+        "\n",
+        "$x_{ij} <= y_j$            ∀i,j\n",
+        "\n",
+        "\n",
+        "$x_{ij}, y_j$ ∈ {0,1}\n",
+        "    "
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "N7lYNSKwLvuW"
       },
       "outputs": [],
       "source": [
         "def select_m_stocks_by_IP(rho, m, tickers, env, verbose=False):\n",
-        "    \"\"\"\n",
-        "    IP:\n",
-        "      max sum_{i,j} rho_ij * x_ij\n",
-        "      s.t. sum_j y_j = m\n",
-        "           sum_j x_ij = 1          ∀i\n",
-        "           x_ij <= y_j             ∀i,j\n",
-        "           x_ij, y_j ∈ {0,1}\n",
-        "    \"\"\"\n",
         "    n = rho.shape[0]\n",
         "    mdl = gp.Model(\"stock_selection\", env=env)\n",
         "    if not verbose:\n",
@@ -338,8 +354,20 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "\n",
+        "  $min \\sum_t | q_t - \\sum_j w_j R[t, j] |$\n",
+        "\n",
+        "  s.t.\n",
+        "\n",
+        "  $\\sum w =1, w \\geq 0$ (if nonneg)"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "94688CNRNc7o"
       },
@@ -348,10 +376,7 @@
         "import numpy as np\n",
         "\n",
         "def fit_weights_L1(R, q, sel_idx, env, nonneg=True, verbose=False):\n",
-        "    \"\"\"\n",
-        "    Minimize sum_t | q_t - sum_j w_j R[t,j] |\n",
-        "    s.t. sum w = 1, w >= 0 (if nonneg)\n",
-        "    \"\"\"\n",
+        "  \n",
         "    T, N = R.shape\n",
         "    J = sel_idx\n",
         "    mdl = gp.Model(\"weight_fit_L1\", env=env)\n",
@@ -378,7 +403,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -414,16 +439,16 @@
         "tickers = list(prev_returns.columns)\n",
         "sel_idx, sel_tickers, rep = select_m_stocks_by_IP(rho, m=5, tickers=tickers, env=env)\n",
         "\n",
-        "R24 = prev_returns.values   # T24 x N\n",
-        "R25 = curr_returns.values   # T25 x N\n",
-        "q24 = q_2024.values      # T24\n",
-        "q25 = q_2025.values      # T25\n",
+        "R24 = prev_returns.values   #T24 x N\n",
+        "R25 = curr_returns.values   #T25 x N\n",
+        "q24 = q_2024.values      #T24\n",
+        "q25 = q_2025.values      #T25\n",
         "\n",
         "print(R24)\n",
         "\n",
         "w_full_2024, in_sample_L1 = fit_weights_L1(R24, q24, sel_idx,  env=env, nonneg=True)\n",
         "\n",
-        "# out-of-sample L1 on 2025\n",
+        "#out-of-sample L1 on 2025\n",
         "pred25 = R25 @ w_full_2024\n",
         "oos_L1 = np.sum(np.abs(q25 - pred25))\n",
         "print(f\"In-sample L1 (2024): {in_sample_L1:.6f}\")\n",
@@ -493,13 +518,9 @@
       "source": [
         "print(results)\n",
         "\n",
-        "#print results more detailed\n",
-        "\n",
-        "# Create detailed results table by m value\n",
         "df_results = pd.DataFrame(results)\n",
         "df_results.to_csv('results.csv', index=False)\n",
         "\n",
-        "# Create summary table with one row per m value\n",
         "results_summary = df_results[['m', 'L1_2024', 'L1_2025']].copy()\n",
         "results_summary.columns = ['m', 'In-Sample L1 (2024)', 'Out-of-Sample L1 (2025)']\n",
         "\n",
@@ -515,7 +536,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -537,7 +558,6 @@
         }
       ],
       "source": [
-        "# After computing results for all m values\n",
         "df_results = pd.DataFrame(results)\n",
         "\n",
         "plt.figure(figsize=(10, 6))\n",
@@ -552,8 +572,40 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Decision Variables:\n",
+        "\n",
+        "$w_j$ - portfolio weight on stock j\n",
+        "\n",
+        "$y_j \\in \\{0, 1\\}$ - Binary variable for stock selection\n",
+        "\n",
+        "$e_t \\geq 0$ - absolute tracking error at time t\n",
+        "\n",
+        "$min \\sum_t e_t$\n",
+        "\n",
+        "s.t.\n",
+        "\n",
+        "$e_t \\geq q_t - \\sum_j w_j r_{t,j}$\n",
+        "\n",
+        "$e_t \\geq -q_t - \\sum_j w_j r_{t,j}$\n",
+        "\n",
+        "$\\sum_j y_j = m$\n",
+        "\n",
+        "\n",
+        "$w_j \\leq M y_j$ for $j = 1, ..., N$\n",
+        "\n",
+        "$w_j \\geq 0$\n",
+        "\n",
+        "$w_j \\in \\mathbb{R}$\n",
+        "\n",
+        "$y_j \\in \\{0,1\\}$, $e_t \\geq 0$"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "1EZZJQHc_Cz8"
       },
@@ -565,21 +617,21 @@
         "    mdl.Params.OutputFlag = 1 if verbose else 0\n",
         "    mdl.Params.TimeLimit = time_limit_sec\n",
         "\n",
-        "    # Vars\n",
+        "\n",
         "    w = mdl.addVars(N, lb=0.0 if nonneg else -GRB.INFINITY, name=\"w\")\n",
         "    y = mdl.addVars(N, vtype=GRB.BINARY, name=\"y\")\n",
         "    e = mdl.addVars(T, lb=0.0, name=\"e\")\n",
         "\n",
-        "    # abs value linearization\n",
+        "    #abs value linearization\n",
         "    for t in range(T):\n",
         "        mdl.addConstr(e[t] >= q_vec[t] - gp.quicksum(w[j] * rets_mat[t, j] for j in range(N)))\n",
         "        mdl.addConstr(e[t] >= -q_vec[t] + gp.quicksum(w[j] * rets_mat[t, j] for j in range(N)))\n",
         "\n",
-        "    # budget + sparsity\n",
+        "    #budget + sparsity\n",
         "    mdl.addConstr(gp.quicksum(w[j] for j in range(N)) == 1.0)\n",
         "    mdl.addConstr(gp.quicksum(y[j] for j in range(N)) == m)\n",
         "\n",
-        "    # big-M linking (M=1 is tight under nonneg + budget)\n",
+        "    #big-M linking (M=1 is tight under nonneg + budget)\n",
         "    M = 1.0\n",
         "    for j in range(N):\n",
         "        mdl.addConstr(w[j] <= M * y[j])\n",
@@ -668,7 +720,7 @@
         "import json\n",
         "import os\n",
         "\n",
-        "# Load existing results if available\n",
+        "\n",
         "mip_results = {}\n",
         "if os.path.exists(RESULTS_FILE):\n",
         "    print(f\"Loading existing results from {RESULTS_FILE}\")\n",
@@ -677,34 +729,34 @@
         "        mip_results = data.get('results', {})\n",
         "        print(f\"Found {len(mip_results)} existing results\")\n",
         "\n",
-        "# Run MIP optimization for all m values\n",
+        "#run MIP optimization for all m values\n",
         "print(f\"\\nStarting MIP optimization (time limit: {GUROBI_TIME_LIMIT}s per m)\")\n",
         "print(\"=\"*70)\n",
         "\n",
         "for m in M_VALUES:\n",
         "    m_key = str(m)\n",
         "    \n",
-        "    # Skip if already computed\n",
+        "    #skip if already computed\n",
         "    if m_key in mip_results and mip_results[m_key].get('L1_2024') is not None:\n",
         "        print(f\"m={m}: Skipping (already computed)\")\n",
         "        continue\n",
         "    \n",
-        "    # Skip if m >= number of stocks\n",
+        "    #skip if m >= number of stocks\n",
         "    if m >= R24.shape[1]:\n",
         "        print(f\"m={m}: Skipping (m >= number of stocks)\")\n",
         "        continue\n",
         "    \n",
         "    print(f\"\\nm={m}: Optimizing (time limit: {GUROBI_TIME_LIMIT}s)...\")\n",
         "    \n",
-        "    # Run MIP optimization\n",
+        "    #run MIP optimization\n",
         "    w_mip, sel_idx_mip, L1_2024 = fit_sparse_weights_MIP_L1(\n",
         "        R24, q24, m, env=env, time_limit_sec=GUROBI_TIME_LIMIT, nonneg=True\n",
         "    )\n",
         "    \n",
-        "    # Evaluate on 2025 data\n",
+        "    #evaluate on 2025 data\n",
         "    L1_2025 = float(np.sum(np.abs(q25 - R25 @ w_mip)))\n",
         "    \n",
-        "    # Store results\n",
+        " \n",
         "    mip_results[m_key] = {\n",
         "        \"m\": m,\n",
         "        \"L1_2024\": float(L1_2024),\n",
@@ -716,7 +768,7 @@
         "    \n",
         "    print(f\"  Completed: L1_2024={L1_2024:.6f}, L1_2025={L1_2025:.6f}\")\n",
         "    \n",
-        "    # Save results incrementally\n",
+        "\n",
         "    results_full = {\n",
         "        \"metadata\": {\n",
         "            \"time_limit_per_m\": GUROBI_TIME_LIMIT,\n",
@@ -736,7 +788,7 @@
         "print(\"MIP Optimization Complete!\")\n",
         "print(f\"Results saved to: {RESULTS_FILE}\")\n",
         "\n",
-        "# Display summary\n",
+        "\n",
         "df_mip = pd.DataFrame([mip_results[str(m)] for m in M_VALUES if str(m) in mip_results])\n",
         "if not df_mip.empty:\n",
         "    print(\"\\nMIP Results Summary:\")\n",
